--- a/package.json
+++ b/package.json
@@ -5,11 +5,18 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "build-themes": "devextreme build",
+    "postinstall": "npm run build-themes"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "devextreme": "^20.2.4",
+    "devextreme-vue": "^20.2.4",
+    "node-sass": "^4.11.0",
+    "vue": "^2.6.11",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -18,7 +25,10 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "devextreme-cli": "1.2.11",
+    "sass-loader": "^7.1.0",
+    "devextreme-themebuilder": "^20.2.4"
   },
   "eslintConfig": {
     "root": true,
